syntax = "proto3";

import "Protos/base.proto";
import "Protos/tarefa.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.GRPC.Protos.ApontamentoProto";

package apontamento;

service ApontamentoProto {

	rpc Incluir (ApontamentoModel) returns (ApontamentoModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (ApontamentoModel);
	rpc Alterar (ApontamentoModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
	rpc ListarPorRecurso (base.BaseRequest) returns (ListarPorRecursoReply);
}

message ApontamentoModel {

	string Id = 1;
	string Descricao = 2;
	string DataApontamento = 3;
	int32 QtdHoras = 4;
	string IdTarefa = 5;
	string IdRecurso = 6;
	string DataInclusao = 7;
	tarefa.TarefaModel Tarefa = 8;
}

message ListarReply {

    repeated ApontamentoModel Lista = 1;
}

message ListarPorRecursoReply {

    repeated ApontamentoModel Lista = 1;
}